yaml/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-golemgrid
  labels:
    app: postgres
spec:
    replicas: 1
    selector:
      matchLabels:
        app: postgres
    template:
      metadata:
        labels:
          app: postgres
      spec:
        containers:
          - image: postgres:alpine
            name: postgres
            ports:
              - containerPort: 5432
                name: postgres
