yaml/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
  labels:
    app: api
spec:
    replicas: 2
    selector:
      matchLabels:
        app: api
    template:
      metadata:
        labels:
          app: api
      spec:
        containers:
          - image: phillipjensen/golemgrid-api:latest
            name: api
            ports:
              - containerPort: 8002
                name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - protocol: TCP
      port: 8002
      targetPort: http
  selector:
    app: api
