yaml/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend-celery
  labels:
    app: api-celery
spec:
    replicas: 2
    selector:
      matchLabels:
        app: api-celery
    template:
      metadata:
        labels:
          app: api-celery
      spec:
        containers:
          - image: phillipjensen/golem-stats-backend-celery:032a924217a5a70631f54aa27356134dd8234933
            name: api-celery
            ports:
              - containerPort: 8002
                name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api-celery
  labels:
    app: api-celery
spec:
  ports:
    - protocol: TCP
      port: 8002
      targetPort: http
  selector:
    app: api-celery
