yaml/celerybeat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend-celery-beat
  labels:
    app: api-celery-beat
spec:
    replicas: 1
    selector:
      matchLabels:
        app: api-celery-beat
    template:
      metadata:
        labels:
          app: api-celery-beat
      spec:
        containers:
          - image: phillipjensen/golem-stats-backend-celery-beat:032a924217a5a70631f54aa27356134dd8234933
            name: api-celery-beat
            ports:
              - containerPort: 8002
                name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api-celery-beat
  labels:
    app: api-celery-beat
spec:
  ports:
    - protocol: TCP
      port: 8002
      targetPort: http
  selector:
    app: api-celery-beat
